Fix ThemeSwitcher bug with z-index, add favicon and openGraph

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -101,7 +101,8 @@ body {
 
 [data-theme="dark"] body {
   background-color: #000;
-  color: #9353d3;
+  color: #f5f5f5;
+  /*#9353d3;*/
 }
 
 a {
